trunk/Archive2/17/696566a350a2af/output
main.cpp:17:35: error: declaration of 'void func()' not in a namespace surrounding 'B'
     template <> void B::func<int>() {cout <<"int spec"<<endl;}
                                   ^
